<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/spacing_mega_loose"
                android:contentDescription="@string/shopify_logo_content_description"
                android:src="@drawable/ic_shopify_logo_darkbg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                style="@style/Shopify.Polaris.Typography.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_base"
                android:text="@string/memory_matching_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/user_score_button"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_base_tight"
                android:padding="@dimen/spacing_base"
                android:text="@string/score_title"
                app:cornerRadius="@dimen/button_corner_radius"
                app:icon="@drawable/ic_star"
                app:iconGravity="start"
                app:layout_constraintBottom_toTopOf="@+id/settings_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_button"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_base_tight"
                android:padding="@dimen/spacing_base"
                android:text="@string/settings_title"
                app:cornerRadius="@dimen/button_corner_radius"
                app:icon="@drawable/ic_settings"
                app:iconGravity="start"
                app:layout_constraintBottom_toTopOf="@+id/play_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_score_button"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/play_button"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_loose"
                android:padding="@dimen/spacing_base"
                android:text="@string/play_title"
                app:cornerRadius="@dimen/button_corner_radius"
                app:icon="@drawable/ic_play"
                app:iconGravity="start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_button"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="420dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>